--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,12 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
-    <link href="https://css.gg/chevron-down.css" rel="stylesheet" />
+    <link rel="icon" type="image/x-icon" href="https://firebasestorage.googleapis.com/v0/b/chat-realtime-ptitworks.appspot.com/o/logo-01.ico?alt=media&token=e9c6eaa4-6b66-436e-a548-535a194ce154" />
+    <meta property="og:image" content="https://firebasestorage.googleapis.com/v0/b/chat-realtime-ptitworks.appspot.com/o/logo-01.jpg?alt=media&token=309a72bf-42be-4b7c-b7f2-9b7636834cd4" />
+    <meta id="metaDescription" name="description" content="Website được tạo bởi team Giang - Cường - Dũng, Ptitworks là công cụ giúp việc làm việc nhóm trở lên đơn giản hơn!!!" />
+    <link href="https://css.gg/css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
-    <title>
-        <%= htmlWebpackPlugin.options.title %>
-    </title>
+    <title>PTITWORKS - công cụ quản lý công việc</title>
 </head>
 
 <body>
