--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <meta property="og:image" content="https://firebasestorage.googleapis.com/v0/b/chat-realtime-ptitworks.appspot.com/o/logo-01.jpg?alt=media&token=309a72bf-42be-4b7c-b7f2-9b7636834cd4" />
     <meta id="metaDescription" name="description" content="Website được tạo bởi team Giang - Cường - Dũng, Ptitworks là công cụ giúp việc làm việc nhóm trở lên đơn giản hơn!!!" />
     <link href="https://css.gg/css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
     <title>PTITWORKS - công cụ quản lý công việc</title>
 </head>
